fix contact form overflow

--- a/src/component/Contact/Contact.module.scss
+++ b/src/component/Contact/Contact.module.scss
@@ -11,7 +11,7 @@
 
   .form {
     width: 100%;
-    height: 100%;
+    height: fit-content;
     border: 1px solid var(--surface-700);
     border-radius: $radius_1;
     background-color: var(--surface-800);
